--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
 					</header>
 					<p>Je suis un programmeur, photographe et monteur vidéo diplomé en sciences informatiques et mathématiques.</p>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<!-- <a href="#two" class="button style2 down anchored">Next</a>  -->
 			</section>
 
 		<!-- Two -->
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Mes compétences/h2>
+						<h2>Mes compétences </h2>
 					</header>
 					<p>java, html, javascript, python</p>
 					<p>Photoshop, Premiere Pro, After Effects, Final Cut Pro</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<!-- <a href="#work" class="button style2 down anchored">Next</a> -->
 			</section>
 
 		<!-- Work -->
