Changed the bottom icon links to open a new tab

--- a/index.html
+++ b/index.html
@@ -189,7 +189,11 @@
         <ul class="icons">
           <li>
             <!-- Instagram Icon -->
-            <a href="https://www.instagram.com/adridomdom/">
+            <a
+              href="https://www.instagram.com/adridomdom/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <svg
                 class="icon"
                 id="icon"
@@ -204,7 +208,11 @@
             ></a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/adrien-demers-a9535718b/">
+            <a
+              href="https://www.linkedin.com/in/adrien-demers-a9535718b/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <svg
                 class="icon"
                 xmlns="http://www.w3.org/2000/svg"
@@ -220,7 +228,11 @@
           </li>
           <!--github link-->
           <li>
-            <a href="https://github.com/AdrienDemers">
+            <a
+              href="https://github.com/AdrienDemers"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <svg
                 class="icon"
                 xmlns="http://www.w3.org/2000/svg"
