Update to skills

--- a/index.html
+++ b/index.html
@@ -164,17 +164,22 @@
           <div class="hard-skills">
             <h1>"Hard" Skills</h1>
             <ul class="list">
-              <li>- Maitrise de Java</li>
+              <li>- Java</li>
               <li>- Montage Vidéo</li>
-              <li>- Prise et Retouche de Photo</li>
-              <li>- Programmation</li>
+              <li>- Prise/Retouche de Photo</li>
+              <li>
+                - Maîtrise de Premiere Pro, After Effects, Lightroom, Photoshop
+              </li>
             </ul>
           </div>
 
           <div class="soft-skills">
-            <h1>Soft Skills</h1>
+            <h1>"Soft" Skills</h1>
             <ul>
+              <li>- Créativité</li>
+              <li>- Motivation</li>
               <li>- Persevérence</li>
+              <li>- Résolution de Problème</li>
             </ul>
           </div>
         </div>
