Changed language of navbar to match main page

--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
       <div class="nav-wrapper">
         <div class="left-side">
           <div class="nav-link-wrapper">
-            <a href="index.html">Home</a>
+            <a href="index.html">Accueil</a>
           </div>
           <div class="nav-link-wrapper active-nav-link">
-            <a href="about.html">About</a>
+            <a href="about.html">À propos</a>
           </div>
         </div>
 
