--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <a href="index.html">Accueil</a>
           </div>
           <div class="nav-link-wrapper active-nav-link">
-            <a href="about.html">À propos</a>
+            <a href="about.html">À Propos</a>
           </div>
         </div>
 
@@ -38,9 +38,17 @@
           </div>
 
           <div class="profile-content-wrapper">
-            <h1>Bonjour</h1>
-            <p>Mon nom est Adrien Demers.</p>
-            <p></p>
+            <h1>Adrien Demers</h1>
+            <p>
+              Adrien est un programmeur, un photographe et un monteur
+              vidéo. Depuis 2012, la photographie et le montage vidéo le
+              passionne.
+            </p>
+            <p>
+              Il a commencé à apprendre la programmation en 2017 avec Java au
+              Cégep. Lors de son dernier projet, il a élaborer l'interface d'une
+              application android.
+            </p>
           </div>
         </div>
       </div>
