--- a/about.html
+++ b/about.html
@@ -38,15 +38,14 @@
           </div>
 
           <div class="profile-content-wrapper">
-            <h1>Adrien Demers</h1>
+            <h1>Bonjour</h1>
             <p>
-              Adrien est un programmeur, un photographe et un monteur
-              vidéo. Depuis 2012, la photographie et le montage vidéo le
-              passionne.
+              Je suis un programmeur, un photographe et un monteur vidéo. Depuis
+              2012, la photographie et le montage vidéo me passionne.
             </p>
             <p>
-              Il a commencé à apprendre la programmation en 2017 avec Java au
-              Cégep. Lors de son dernier projet, il a élaborer l'interface d'une
+              J'ai commencé à apprendre la programmation en 2017 avec Java au
+              Cégep. Lors de mon dernier projet, j'ai élaborer l'interface d'une
               application android.
             </p>
           </div>
@@ -59,7 +58,7 @@
           <h1>Me Contacter</h1>
           <p>adrien.demers@hotmail.com</p>
         </div>
-        <!--Icons-->
+        <!--Icons  ul -->
         <ul class="icons">
           <li>
             <!-- Instagram Icon -->
@@ -123,7 +122,13 @@
 
         <div class="end-logo">
           <img src="/images/logos/logo1.png" />
+          <ul class="copyright"></ul>
         </div>
+
+        <!-- Menu -->
+        <ul class="copyright">
+          <li>&copy; Adrien Demers</li>
+        </ul>
       </footer>
     </div>
     <!-- end of container -->
