--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="skills-wrapper">
         <div class="two-column-wrapper">
           <div class="hard-skills">
-            <h1>"Hard" Skills</h1>
+            <h1>Hard Skills</h1>
             <ul class="list">
               <li>- Java</li>
               <li>- Montage Vidéo</li>
@@ -174,7 +174,7 @@
           </div>
 
           <div class="soft-skills">
-            <h1>"Soft" Skills</h1>
+            <h1>Soft Skills</h1>
             <ul>
               <li>- Créativité</li>
               <li>- Motivation</li>
