--- a/about.html
+++ b/about.html
@@ -1,281 +1,237 @@
-/* Master styles*/
-body {
-  font-family: "Lato", sans-serif;
-  margin: 0px;
-}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BugTracker</title>
 
-.container {
-  display: grid;
-  grid-template-columns: 1fr;
-}
+    <link rel="icon" href="./images/logos/Favicon.png" />
 
-/* Nav styles */
-.nav-wrapper {
-  display: flex;
-  justify-content: space-between;
-  padding: 38px;
-}
+    <link rel="stylesheet" href="styles.css" />
 
-.left-side {
-  display: flex;
-}
+    <!-- Load Firebase-->
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
 
-.nav-wrapper > .left-side > div {
-  margin-right: 20px;
-  font-size: 1.2em;
-  text-transform: uppercase;
-}
+    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+    <!--<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-analytics.js"></script> -->
 
-.nav-wrapper > .right-side > div {
-  font-size: 1.2em;
-  text-transform: uppercase;
-  text-shadow: 0px 0px 1px black;
-}
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
 
-.nav-link-wrapper {
-  height: 22px;
-  margin-left: 16px;
-  border-bottom: 1px solid transparent;
-  transition: border-bottom 0.5s;
-}
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAGydIrbuMQfDCTp7OF-ihRAZX_FfD5-SE",
+        authDomain: "bugtracker-43328.firebaseapp.com",
+        databaseURL: "https://bugtracker-43328-default-rtdb.firebaseio.com",
+        projectId: "bugtracker-43328",
+        storageBucket: "bugtracker-43328.appspot.com",
+        messagingSenderId: "1072556556964",
+        appId: "1:1072556556964:web:b6304e8652ae19a2915c31",
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
+  </head>
 
-.nav-link-wrapper a {
-  color: #8a8a8a;
-  text-decoration: none;
-  transition: color 0.5s;
-}
+  <body>
+    <div class="container">
+      <div class="nav-wrapper">
+        <div class="left-side">
+          <img src="./images/logos/Favicon.png" />
+          <a href="index.html">BugTracker</a>
+        </div>
 
-.nav-link-wrapper:hover {
-  border-bottom: 1px solid black;
-}
+        <div class="sign-out">
+          <button type="button" id="sign-out-button">Sign out</button>
+        </div>
+      </div>
+    </div>
 
-.nav-link-wrapper a:hover {
-  color: black;
-}
+    <div id="main-message"></div>
 
-.active-nav-link {
-  border-bottom: 1px solid black;
-}
+    <div id="editBugModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="closeBtn">&times;</span>
+          <h2>Edit Bug</h2>
+        </div>
+        <!-- Edit bug Form -->
+        <div class="edit-bug-form">
+          <h2>edit this bug:</h2>
 
-.active-nav-link a {
-  color: black !important;
-}
+          <div id="edit-msg"></div>
 
-/* Portfolio styles*/
+          <form>
+            <input type="hidden" id="bug-id" />
+            <div class="form-group">
+              <label for="new-bug-title">Bug Title</label>
+              <input
+                type="text"
+                id="new-bug-title"
+                placeholder="New Bug Title"
+              />
+            </div>
+            <div class="form-group">
+              <label for="new-bug-description">New Bug Description</label>
+              <textarea
+                class="form-control"
+                id="new-bug-description"
+                cols="3"
+                rows="8"
+                placeholder="New Bug Description"
+              ></textarea>
+            </div>
 
-.portfolio-items-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding-bottom: 5px;
-  padding-left: 4px;
-  padding-right: 4px;
-}
+            <div class="checkbox">
+              <label for="is-resolved">
+                <input id="is-resolved" type="checkbox" />Is Resolved
+              </label>
+            </div>
 
-.portfolio-item-wrapper {
-  position: relative;
-  border: white;
-  border-width: 1px;
-  border-style: solid;
-}
+            <div class="form-group">
+              <label for="bug-date">Date Added: </label>
+              <p id="bug-date" name="bug-date">no date data</p>
+            </div>
 
-.portfolio-img-background {
-  height: 350px;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+            <button type="button" class="btn" id="update-bug-btn">
+              Update Bug
+            </button>
+          </form>
+        </div>
+        <!-- End of Edit Bug form -->
+      </div>
+    </div>
+    <!-- End of Edit Bug modal -->
 
-.image-text-wrapper {
-  position: absolute;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  text-align: center;
-  padding-left: 100px;
-  padding-right: 100px;
-}
+    <div id="CreateAccountModal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="closeBtn" id="createAccountModalCloseBtn">&times;</span>
+        </div>
+        <!-- Create Account Form -->
+        <div class="create-account-form">
+          <h2>Create an Account</h2>
+          <div id="create-account-msg"></div>
+          <form>
+            <div class="form-group">
+              <label for="createAccountEmailInput">Email address</label>
+              <input
+                type="email"
+                class="form-control"
+                id="createAccountEmailInput"
+                placeholder="Email"
+              />
+            </div>
+            <div class="form-group">
+              <label for="createAccountPasswordInput">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="createAccountPasswordInput"
+                placeholder="Password"
+              />
+            </div>
 
-.logo-wrapper img {
-  width: 60%;
-  margin-bottom: 20px;
-  flex-direction: column;
-  align-items: center;
-}
+            <input
+              type="radio"
+              id="programmer"
+              name="type"
+              value="programmer"
+            />
+            <label for="programmer">Programmer</label><br />
+            <input type="radio" id="manager" name="type" value="manager" />
+            <label for="manager">Project Manager</label><br />
 
-.image-text-wrapper .logo-wrapper {
-  transition: 1s;
-  color: transparent;
-  fill: aqua;
-  color: aqua;
-}
+            <button type="button" class="btn" id="create-account-button">
+              Create Account
+            </button>
+          </form>
+        </div>
+        <!-- End of Create Account Bug form -->
+      </div>
+    </div>
+    <!-- End of Create Account Bug modal -->
 
-.image-text-wrapper:hover .logo-wrapper {
-  size: 5em;
-  fill: aqua;
-}
+    <!-- Login Form -->
+    <div class="login-form" id="login-form">
+      <form>
+        <h3>Sign in</h3>
+        <div class="form-group">
+          <label for="emailInput">Email address</label>
+          <input
+            type="email"
+            class="form-control"
+            id="emailInput"
+            placeholder="Email"
+          />
+        </div>
+        <div class="form-group">
+          <label for="passwordInput">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="passwordInput"
+            placeholder="Password"
+          />
+        </div>
 
-.img-darken {
-  transition: 0.8s;
-  filter: brightness(50%);
-}
+        <button type="button" class="btn" id="sign-in-button">Sign in</button>
+        <button type="button" class="btn" id="create-account-modal-button">
+          Create Account
+        </button>
+        <button
+          type="google-login-button"
+          class="btn"
+          id="sign-in-google-button"
+        >
+          Sign in with Google not done
+        </button>
+      </form>
+    </div>
+    <!-- End of Login Form -->
 
-.test {
-  display: flex;
-}
+    <!-- Add Bug Form-->
+    <div class="add-bug-form" id="add-bug-form">
+      <h2>Add a bug</h2>
 
-.test > ul {
-  border: 0;
-  list-style-type: none;
-}
-.test > ul > li {
-  height: 200px;
-  transition: color 2s;
-}
+      <div class="msg"></div>
 
-.test > ul > li:hover {
-  color: white;
-}
+      <form>
+        <div class="form-group">
+          <label for="bug-title">Bug Title</label>
+          <input
+            type="text"
+            class="form-control"
+            id="bug-title"
+            placeholder="Bug Title"
+          />
+        </div>
+        <div class="form-group">
+          <label for="bug-description">Bug Description</label>
+          <textarea
+            class="form-control"
+            id="bug-description"
+            rows="4"
+            col="150"
+            placeholder="Bug Description"
+          ></textarea>
+        </div>
 
-.skills-wrapper {
-  margin-top: 60px;
-  margin-bottom: 60px;
-  list-style: none;
-}
+        <button type="button" class="btn" id="save-bug-btn">Save</button>
+      </form>
+    </div>
+    <!-- End of Add bug Form -->
 
-.hard-skills {
-  margin: 0px 0px 20px 100px;
-  font-weight: lighter;
-}
-.hard-skills > h1 {
-  font-weight: lighter;
-  font-size: 2.4em;
-  font-style: italic;
-  text-align: center;
-  padding: 5px 10px 10px 10px;
-}
+    <div class="show-bugs" id="show-bugs">
+      <h4>Login to see database</h4>
+    </div>
 
-.hard-skills > ul {
-  font-weight: lighter;
-  font-style: normal;
-  font-size: 1.5em;
-  list-style: none;
-  list-style-type: none;
-  padding: 0;
-  text-align: center;
-}
-
-.soft-skills {
-  margin: 0px 100px 20px 0px; /* top right bottom left */
-  font-weight: lighter;
-}
-.soft-skills > h1 {
-  font-weight: lighter;
-  font-size: 2.4em;
-  font-style: italic;
-  text-align: center;
-  padding: 5px 10px 10px 10px;
-}
-.soft-skills > ul {
-  font-weight: lighter;
-  font-style: normal;
-  font-size: 1.5em;
-  padding: 0;
-  margin: auto;
-  width: 50%;
-  list-style-type: none;
-  text-align: center;
-}
-/* End of Main page styles*/
-
-/* Icons */
-
-ul.icons {
-  cursor: default;
-  padding: 0;
-  border: 500px;
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-}
-
-ul.icons li {
-  display: inline-block;
-  padding: 0px 20px;
-}
-
-ul.icons a {
-  width: 2em;
-  height: 2em;
-  line-height: 2em;
-  text-align: center;
-}
-
-#footer {
-  background-color: #2c2c2c;
-  padding: 1.5em;
-}
-.end-logo {
-  display: flex;
-  justify-content: center;
-  block-size: 8em;
-}
-
-ul {
-  font-size: 3em;
-}
-
-svg {
-  display: block;
-}
-
-.icon {
-  fill: #979797;
-  transition: fill 0.4s;
-}
-.icon:hover {
-  fill: white;
-}
-
-#icon {
-  transition-timing-function: ease-in-out;
-}
-
-.contact {
-  color: white;
-  text-align: center;
-  margin-bottom: 60px;
-}
-ul.copyright {
-  color: rgb(214, 236, 255);
-  cursor: default;
-  text-align: end;
-  font-size: 1em;
-  padding: 0em;
-  margin: 0em;
-}
-
-/* About page */
-.two-column-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.profile-image-wrapper img {
-  width: 60%;
-  display: block;
-  margin: auto;
-  margin-bottom: 60px;
-  /* padding: 40px 150px 128px 100px; top right bottom left */
-}
-
-.profile-content-wrapper {
-  padding: 30px;
-}
-
-.profile-content-wrapper h1 {
-  color: lightseagreen;
-}
+    <!-- Script -->
+    <script src="main.js"></script>
+  </body>
+</html>
