--- a/about.html
+++ b/about.html
@@ -1,237 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BugTracker</title>
-
-    <link rel="icon" href="./images/logos/Favicon.png" />
-
+    <meta charset="utf-8" />
+    <title>À Propos d'Adrien</title>
+    <meta name="robot" content="index,follow" />
+    <link rel="icon" href="/images/logos/Galaxies (abstract)0612.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
-
-    <!-- Load Firebase-->
-    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
-
-    <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
-    <!--<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-analytics.js"></script> -->
-
-    <!-- Add Firebase products that you want to use -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
-
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyAGydIrbuMQfDCTp7OF-ihRAZX_FfD5-SE",
-        authDomain: "bugtracker-43328.firebaseapp.com",
-        databaseURL: "https://bugtracker-43328-default-rtdb.firebaseio.com",
-        projectId: "bugtracker-43328",
-        storageBucket: "bugtracker-43328.appspot.com",
-        messagingSenderId: "1072556556964",
-        appId: "1:1072556556964:web:b6304e8652ae19a2915c31",
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
   </head>
-
   <body>
     <div class="container">
       <div class="nav-wrapper">
         <div class="left-side">
-          <img src="./images/logos/Favicon.png" />
-          <a href="index.html">BugTracker</a>
+          <div class="nav-link-wrapper">
+            <a href="index.html">Accueil</a>
+          </div>
+          <div class="nav-link-wrapper active-nav-link">
+            <a href="about.html">À Propos</a>
+          </div>
         </div>
 
-        <div class="sign-out">
-          <button type="button" id="sign-out-button">Sign out</button>
+        <div class="right-side">
+          <div class="titre">
+            <div>ADRIEN DEMERS</div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div id="main-message"></div>
+      <div class="content-wrapper">
+        <div class="two-column-wrapper">
+          <div class="profile-image-wrapper">
+            <img src="images/profile.jpg" />
+          </div>
 
-    <div id="editBugModal" class="modal">
-      <div class="modal-content">
-        <div class="modal-header">
-          <span class="closeBtn">&times;</span>
-          <h2>Edit Bug</h2>
+          <div class="profile-content-wrapper">
+            <h1>Bonjour</h1>
+            <p>
+              Je suis un programmeur, un photographe et un monteur vidéo. Depuis
+              2012, la photographie et le montage vidéo me passionne.
+            </p>
+            <p>
+              J'ai commencé à apprendre la programmation en 2017 avec Java au
+              Cégep. Lors de mon dernier projet, j'ai élaborer l'interface d'une
+              application android.
+            </p>
+          </div>
         </div>
-        <!-- Edit bug Form -->
-        <div class="edit-bug-form">
-          <h2>edit this bug:</h2>
-
-          <div id="edit-msg"></div>
-
-          <form>
-            <input type="hidden" id="bug-id" />
-            <div class="form-group">
-              <label for="new-bug-title">Bug Title</label>
-              <input
-                type="text"
-                id="new-bug-title"
-                placeholder="New Bug Title"
-              />
-            </div>
-            <div class="form-group">
-              <label for="new-bug-description">New Bug Description</label>
-              <textarea
-                class="form-control"
-                id="new-bug-description"
-                cols="3"
-                rows="8"
-                placeholder="New Bug Description"
-              ></textarea>
-            </div>
-
-            <div class="checkbox">
-              <label for="is-resolved">
-                <input id="is-resolved" type="checkbox" />Is Resolved
-              </label>
-            </div>
-
-            <div class="form-group">
-              <label for="bug-date">Date Added: </label>
-              <p id="bug-date" name="bug-date">no date data</p>
-            </div>
-
-            <button type="button" class="btn" id="update-bug-btn">
-              Update Bug
-            </button>
-          </form>
-        </div>
-        <!-- End of Edit Bug form -->
       </div>
+
+      <!-- Footer -->
+      <footer id="footer">
+        <div class="contact">
+          <h1>Me Contacter</h1>
+          <p>adrien.demers@hotmail.com</p>
+        </div>
+        <!--Icons  ul -->
+        <ul class="icons">
+          <li>
+            <!-- Instagram Icon -->
+            <a
+              href="https://www.instagram.com/adridomdom/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg
+                class="icon"
+                id="icon"
+                xmlns="http://www.w3.org/2000/svg"
+                width="0.88em"
+                height="1em"
+                viewBox="0 0 448 512"
+              >
+                <path
+                  d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9S287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7s74.7 33.5 74.7 74.7s-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8c-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8s26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9c-26.2-26.2-58-34.4-93.9-36.2c-37-2.1-147.9-2.1-184.9 0c-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9c1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0c35.9-1.7 67.7-9.9 93.9-36.2c26.2-26.2 34.4-58 36.2-93.9c2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6c-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6c-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6c29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6c11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+                /></svg
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/adrien-demers-a9535718b/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg
+                class="icon"
+                xmlns="http://www.w3.org/2000/svg"
+                width="0.88em"
+                height="1em"
+                viewBox="0 0 448 512"
+              >
+                <path
+                  d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5c0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7c-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5c67.2 0 79.7 44.3 79.7 101.9V416z"
+                />
+              </svg>
+            </a>
+          </li>
+          <!--github link-->
+          <li>
+            <a
+              href="https://github.com/AdrienDemers"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg
+                class="icon"
+                xmlns="http://www.w3.org/2000/svg"
+                width="1.03em"
+                height="1em"
+                viewBox="0 0 1536 1504"
+              >
+                <path
+                  d="M768 0q209 0 385.5 103T1433 382.5T1536 768q0 251-146.5 451.5T1011 1497q-27 5-40-7t-13-30q0-3 .5-76.5t.5-134.5q0-97-52-142q57-6 102.5-18t94-39t81-66.5t53-105T1258 728q0-119-79-206q37-91-8-204q-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27T450 331.5T365 318q-45 113-8 204q-79 87-79 206q0 85 20.5 150T351 983t80.5 67t94 39t102.5 18q-39 36-49 103q-21 10-45 15t-57 5t-65.5-21.5T356 1146q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5t9 14t13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30t69.5 7t55.5-3.5l23-4q0 38 .5 88.5t.5 54.5q0 18-13 30t-40 7q-232-77-378.5-277.5T0 768q0-209 103-385.5T382.5 103T768 0zM291 1103q3-7-7-12q-10-3-13 2q-3 7 7 12q9 6 13-2zm31 34q7-5-2-16q-10-9-16-3q-7 5 2 16q10 10 16 3zm30 45q9-7 0-19q-8-13-17-6q-9 5 0 18t17 7zm42 42q8-8-4-19q-12-12-20-3q-9 8 4 19q12 12 20 3zm57 25q3-11-13-16q-15-4-19 7t13 15q15 6 19-6zm63 5q0-13-17-11q-16 0-16 11q0 13 17 11q16 0 16-11zm58-10q-2-11-18-9q-16 3-14 15t18 8t14-14z"
+                /></svg
+            ></a>
+          </li>
+        </ul>
+
+        <div class="end-logo">
+          <img src="/images/logos/logo1.png" />
+          <ul class="copyright"></ul>
+        </div>
+
+        <!-- Menu -->
+        <ul class="copyright">
+          <li>&copy; Adrien Demers</li>
+        </ul>
+      </footer>
     </div>
-    <!-- End of Edit Bug modal -->
-
-    <div id="CreateAccountModal" class="modal">
-      <div class="modal-content">
-        <div class="modal-header">
-          <span class="closeBtn" id="createAccountModalCloseBtn">&times;</span>
-        </div>
-        <!-- Create Account Form -->
-        <div class="create-account-form">
-          <h2>Create an Account</h2>
-          <div id="create-account-msg"></div>
-          <form>
-            <div class="form-group">
-              <label for="createAccountEmailInput">Email address</label>
-              <input
-                type="email"
-                class="form-control"
-                id="createAccountEmailInput"
-                placeholder="Email"
-              />
-            </div>
-            <div class="form-group">
-              <label for="createAccountPasswordInput">Password</label>
-              <input
-                type="password"
-                class="form-control"
-                id="createAccountPasswordInput"
-                placeholder="Password"
-              />
-            </div>
-
-            <input
-              type="radio"
-              id="programmer"
-              name="type"
-              value="programmer"
-            />
-            <label for="programmer">Programmer</label><br />
-            <input type="radio" id="manager" name="type" value="manager" />
-            <label for="manager">Project Manager</label><br />
-
-            <button type="button" class="btn" id="create-account-button">
-              Create Account
-            </button>
-          </form>
-        </div>
-        <!-- End of Create Account Bug form -->
-      </div>
-    </div>
-    <!-- End of Create Account Bug modal -->
-
-    <!-- Login Form -->
-    <div class="login-form" id="login-form">
-      <form>
-        <h3>Sign in</h3>
-        <div class="form-group">
-          <label for="emailInput">Email address</label>
-          <input
-            type="email"
-            class="form-control"
-            id="emailInput"
-            placeholder="Email"
-          />
-        </div>
-        <div class="form-group">
-          <label for="passwordInput">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="passwordInput"
-            placeholder="Password"
-          />
-        </div>
-
-        <button type="button" class="btn" id="sign-in-button">Sign in</button>
-        <button type="button" class="btn" id="create-account-modal-button">
-          Create Account
-        </button>
-        <button
-          type="google-login-button"
-          class="btn"
-          id="sign-in-google-button"
-        >
-          Sign in with Google not done
-        </button>
-      </form>
-    </div>
-    <!-- End of Login Form -->
-
-    <!-- Add Bug Form-->
-    <div class="add-bug-form" id="add-bug-form">
-      <h2>Add a bug</h2>
-
-      <div class="msg"></div>
-
-      <form>
-        <div class="form-group">
-          <label for="bug-title">Bug Title</label>
-          <input
-            type="text"
-            class="form-control"
-            id="bug-title"
-            placeholder="Bug Title"
-          />
-        </div>
-        <div class="form-group">
-          <label for="bug-description">Bug Description</label>
-          <textarea
-            class="form-control"
-            id="bug-description"
-            rows="4"
-            col="150"
-            placeholder="Bug Description"
-          ></textarea>
-        </div>
-
-        <button type="button" class="btn" id="save-bug-btn">Save</button>
-      </form>
-    </div>
-    <!-- End of Add bug Form -->
-
-    <div class="show-bugs" id="show-bugs">
-      <h4>Login to see database</h4>
-    </div>
-
-    <!-- Script -->
-    <script src="main.js"></script>
+    <!-- end of container -->
   </body>
 </html>
