--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="container">
       <div class="nav-wrapper">
         <div class="left-side">
+          <img src="/images/logos/logo1.ico" />
+
           <div class="nav-link-wrapper active-nav-link">
             <a href="index.html">Accueil</a>
           </div>
@@ -31,7 +33,7 @@
 
         <div class="right-side">
           <div class="titre">
-            <div>ADRIEN DEMERS</div>
+            <p>ADRIEN DEMERS</p>
           </div>
         </div>
       </div>
