--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="nav-wrapper">
         <div class="left-side">
-          <img src="/images/logos/logo1.ico" />
+          <img src="/images/logos/logo_89.png" />
 
           <div class="nav-link-wrapper active-nav-link">
             <a href="index.html">Accueil</a>
