Added logo on Nav bar

--- a/about.html
+++ b/about.html
@@ -14,22 +14,26 @@
   </head>
   <body>
     <div class="container">
+      <!-- Navigation -->
       <div class="nav-wrapper">
         <div class="left-side">
+          <img src="/images/logos/logo_89.png" />
+
           <div class="nav-link-wrapper">
             <a href="index.html">Accueil</a>
           </div>
           <div class="nav-link-wrapper active-nav-link">
-            <a href="about.html">À Propos</a>
+            <a href="about.html">À propos</a>
           </div>
         </div>
 
         <div class="right-side">
           <div class="titre">
-            <div>ADRIEN DEMERS</div>
+            <p>ADRIEN DEMERS</p>
           </div>
         </div>
       </div>
+      <!-- End of Navigation -->
 
       <div class="content-wrapper">
         <div class="two-column-wrapper">
