--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- -->
   <body>
     <div class="container">
+      <!-- Navigation -->
       <div class="nav-wrapper">
         <div class="left-side">
           <img src="/images/logos/logo_89.png" />
@@ -37,7 +38,9 @@
           </div>
         </div>
       </div>
+      <!-- End of Navigation -->
 
+      <!-- Main content -->
       <div class="content-wrapper">
         <div class="portfolio-items-wrapper">
           <!-- first item -->
@@ -49,7 +52,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" class="subtitle" />
+                <img src="images/logos/ad.png" class="subtitle" />
               </div>
             </div>
           </div>
@@ -62,7 +65,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" />
+                <img src="images/logos/ad.png" />
               </div>
             </div>
           </div>
@@ -75,7 +78,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" />
+                <img src="images/logos/ad.png" />
               </div>
             </div>
           </div>
@@ -88,7 +91,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" />
+                <img src="images/logos/ad.png" />
               </div>
             </div>
           </div>
@@ -101,7 +104,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" />
+                <img src="images/logos/ad.png" />
               </div>
             </div>
           </div>
@@ -114,7 +117,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" />
+                <img src="images/logos/ad.png" />
               </div>
             </div>
           </div>
@@ -127,7 +130,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" />
+                <img src="images/logos/ad.png" />
               </div>
             </div>
           </div>
@@ -140,7 +143,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" />
+                <img src="images/logos/ad.png" />
               </div>
             </div>
           </div>
@@ -153,7 +156,7 @@
 
             <div class="image-text-wrapper">
               <div class="logo-wrapper">
-                <img src="images/logos/Logo.png" />
+                <img src="images/logos/ad.png" />
               </div>
             </div>
           </div>
@@ -255,7 +258,7 @@
         </ul>
 
         <div class="end-logo">
-          <img src="/images/logos/logo1.png" />
+          <img src="/images/logos/logo_89.png" />
         </div>
       </footer>
     </div>
