replace img with lower res

--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
         </ul>
 
         <div class="end-logo">
-          <img src="/images/logos/logo1.png" />
+          <img src="/images/logos/logo_89.png" />
           <ul class="copyright"></ul>
         </div>
 
