--- a/index.html
+++ b/index.html
@@ -165,22 +165,22 @@
       <!--end of content-wrapper-->
 
       <div class="skills-wrapper">
+        <h1>Compétences</h1>
         <div class="two-column-wrapper">
           <div class="hard-skills">
-            <h1>Hard Skills</h1>
+            <!-- <h2>Techniques</h2> -->
             <ul class="list">
               <li>- Java</li>
+              <li>- HTML, CSS, Javascript</li>
               <li>- Montage Vidéo</li>
               <li>- Prise/Retouche de Photo</li>
-              <li>
-                - Maîtrise de Premiere Pro, After Effects, Lightroom, Photoshop
-              </li>
+              <li>- Premiere Pro, After Effects, Lightroom, Photoshop</li>
             </ul>
           </div>
 
           <div class="soft-skills">
-            <h1>Soft Skills</h1>
-            <ul>
+            <!-- <h2>Comportementales</h2> -->
+            <ul class="list">
               <li>- Créativité</li>
               <li>- Motivation</li>
               <li>- Persevérence</li>
